Thu Sep 29 15:18:24 2005  Simon McQueen  <sm@prismtech.com>

        * bin/tao_other_tests.lst:

          Scheduled TAO/orbsvcs/tests/Bug_2247_Regression.

Thu Sep 29 12:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/footprint_stats.sh:
          Fixed codeset library name

Thu Sep 29 09:03:00 UTC 2005  Simon Massey  <simon.massey@prismtech.com>

        * apps/JAWS2/JAWS/IO_Acceptor.cpp:
          Fixed unused parameters

Thu Sep 29 09:02:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/footer.html:
        * html/Stats/configuration.shtml:
        * html/Stats/navigation.html:
        * html/Stats/index.shtml:
        * html/Stats/detailed_footprint.shtml:
          I have taken the files currently on the webserver and updated
          cvs with these versions. This way we can update these files
          in cvs and update the webserver automatically. I will reconfigure
          the stats build to copy all the files in this directory to
          the webserver when the build is ready

        * html/Stats/footprint.shtml:
        * html/Stats/img.html:
        * html/Stats/simple_footprint.shtml:
        * html/Stats/performance.shtml:
        * html/Stats/compilation.shtml:
          New files

        * bin/footprint_stats.sh:
          Also generate the footprint of the new core TAO libs we added
          the last months

Thu Sep 29 08:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/index.html:
          Fixed typo

Thu Sep 29 07:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_fcntl.cpp:
          Use C++ cast instead of c-style cast

        * ace/FILE_Connector.cpp:
          Small layout fix

Wed Sep 28 11:38:07 2005  Chad Elliott  <elliott_c@ociweb.com>

        Committing the following change on behalf of Wallace Zhang
        <zhang_w@ociweb.com>.

        * bin/tao_orb_tests.lst:

          Enabled a new Smart Proxy test,i.e.,